--- a/form-request.html
+++ b/form-request.html
@@ -1,209 +1,219 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding-top: 40px;
-    }
-    .container {
-      background: #fff;
-      padding: 25px 30px;
-      border-radius: 15px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
-      width: 480px;
-      max-width: 95%;
-      animation: fadeIn 0.6s ease-in-out;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 20px;
-      font-weight: bold;
-      background: linear-gradient(90deg, #2193b0, #6dd5ed);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 15px;
-      margin-bottom: 8px;
-      color: #333;
-    }
-    input, select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 15px;
-      box-sizing: border-box;
-    }
-    .calendar {
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 8px;
-      margin-top: 8px;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 20px;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s;
-      background: #2193b0;
-      color: #fff;
-    }
-    button:hover {
-      background: #18657a;
-    }
-    .success {
-      color: green;
-      margin-top: 15px;
-      text-align: center;
-    }
-    .error {
-      color: red;
-      margin-top: 15px;
-      text-align: center;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding-top: 40px;
+    }
+    .container {
+      background: #fff;
+      padding: 25px 30px;
+      border-radius: 15px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      width: 480px;
+      max-width: 95%;
+      animation: fadeIn 0.6s ease-in-out;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 20px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #2193b0, #6dd5ed);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    label {
+      font-weight: bold;
+      display: block;
+      margin-top: 15px;
+      margin-bottom: 8px;
+      color: #333;
+    }
+    input, select {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 15px;
+      box-sizing: border-box;
+    }
+    .calendar {
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 8px;
+      margin-top: 8px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 20px;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s;
+      background: #2193b0;
+      color: #fff;
+    }
+    button:hover {
+      background: #18657a;
+    }
+    .success {
+      color: green;
+      margin-top: 15px;
+      text-align: center;
+    }
+    .error {
+      color: red;
+      margin-top: 15px;
+      text-align: center;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h2>REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
-    <form id="requestForm">
-      <!-- Data karyawan otomatis dari halaman input NIK -->
-      <label>NIK</label>
-      <input type="text" id="nik" name="nik" readonly>
+  <div class="container">
+    <h2>REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
+    <form id="requestForm">
+            <label>NIK</label>
+      <input type="text" id="nik" name="nik" readonly>
 
-      <label>Nama</label>
-      <input type="text" id="nama" name="nama" readonly>
+      <label>Nama</label>
+      <input type="text" id="nama" name="nama" readonly>
 
-      <label>Group</label>
-      <input type="text" id="group" name="group" readonly>
+      <label>Group</label>
+      <input type="text" id="group" name="group" readonly>
 
-      <!-- Pilihan tanggal -->
-      <label>Request Libur:</label>
-      <input type="text" id="libur" name="libur" placeholder="Pilih tanggal libur" readonly>
-      <div id="calendar-libur" class="calendar"></div>
+            <label>Request Libur:</label>
+      <input type="text" id="libur" name="libur" placeholder="Pilih tanggal libur" readonly>
+      <div id="calendar-libur" class="calendar"></div>
 
-      <label>Request Cuti:</label>
-      <input type="text" id="cuti" name="cuti" placeholder="Pilih tanggal cuti" readonly>
-      <div id="calendar-cuti" class="calendar"></div>
+      <label>Request Cuti:</label>
+      <input type="text" id="cuti" name="cuti" placeholder="Pilih tanggal cuti" readonly>
+      <div id="calendar-cuti" class="calendar"></div>
 
-      <!-- Ekstrakulikuler -->
-      <label>Ekstrakulikuler yang diikuti:</label>
-      <select id="ekstrakulikuler" name="ekstrakulikuler" required>
-        <option value="">-- Pilih --</option>
-        <option value="FUTSAL">FUTSAL</option>
-        <option value="BADMINTON">BADMINTON</option>
-        <option value="FUTSAL & BADMINTON">FUTSAL & BADMINTON</option>
-        <option value="TIDAK MENGIKUTI">TIDAK MENGIKUTI</option>
-      </select>
+            <label>Ekstrakulikuler yang diikuti:</label>
+      <select id="ekstrakulikuler" name="ekstrakulikuler" required>
+        <option value="">-- Pilih --</option>
+        <option value="FUTSAL">FUTSAL</option>
+        <option value="BADMINTON">BADMINTON</option>
+        <option value="FUTSAL & BADMINTON">FUTSAL & BADMINTON</option>
+        <option value="TIDAK MENGIKUTI">TIDAK MENGIKUTI</option>
+      </select>
 
-      <button type="submit">KIRIM</button>
-      <div id="status"></div>
-    </form>
-  </div>
+      <button type="submit">KIRIM</button>
+      <div id="status"></div>
+    </form>
+  </div>
 
-  <script>
-    // === URL WebApp kamu ===
-    const scriptURL = "https://script.google.com/macros/s/AKfycbz1_dtlMVATeze7SUaQMAyzrmwMctYRrxoOApjyOPoMdBTCAM_soMvqjLCQUEVqjjb_/exec";
+  <script>
+    // === URL WebApp kamu (SUDAH DIREVISI) ===
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwtzbk4MV7Oo2oQ50YNL8bOXf2V_NMvq59jr0GQyptm0dlNXTeQ7AnWTnDE330Jy6cz/exec";
 
-    // Ambil query param dari input-nik.html
-    const params = new URLSearchParams(window.location.search);
-    document.getElementById("nik").value   = params.get("nik")   || "";
-    document.getElementById("nama").value  = params.get("nama")  || "";
-    document.getElementById("group").value = params.get("group") || "";
+    // Ambil query param dari halaman sebelumnya (input-nik.html)
+    const params = new URLSearchParams(window.location.search);
+    document.getElementById("nik").value   = params.get("nik")   || "";
+    document.getElementById("nama").value  = params.get("nama")  || "";
+    document.getElementById("group").value = params.get("group") || "";
 
-    // === Buat kalender sederhana ===
-    function renderCalendar(containerId, inputId) {
-      const container = document.getElementById(containerId);
-      const input = document.getElementById(inputId);
+    // === Buat kalender sederhana ===
+    function renderCalendar(containerId, inputId) {
+      const container = document.getElementById(containerId);
+      const input = document.getElementById(inputId);
 
-      const today = new Date();
-      const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
-      const year = nextMonth.getFullYear();
-      const month = nextMonth.getMonth();
+      const today = new Date();
+      // Targetkan bulan depan
+      const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
+      const year = nextMonth.getFullYear();
+      const month = nextMonth.getMonth();
 
-      const firstDay = new Date(year, month, 1);
-      const lastDay = new Date(year, month + 1, 0);
-      const totalDays = lastDay.getDate();
+      const lastDay = new Date(year, month + 1, 0);
+      const totalDays = lastDay.getDate();
 
-      container.innerHTML = "";
-      for (let d = 1; d <= totalDays; d++) {
-        const btn = document.createElement("button");
-        btn.type = "button";
-        btn.textContent = d;
-        btn.style.margin = "2px";
-        btn.style.width = "36px";
-        btn.style.height = "36px";
-        btn.style.borderRadius = "50%";
-        btn.style.border = "1px solid #2193b0";
-        btn.style.background = "#fff";
-        btn.style.cursor = "pointer";
+      container.innerHTML = "";
+      for (let d = 1; d <= totalDays; d++) {
+        const btn = document.createElement("button");
+        btn.type = "button";
+        btn.textContent = d;
+        btn.style.margin = "2px";
+        btn.style.width = "36px";
+        btn.style.height = "36px";
+        btn.style.borderRadius = "50%";
+        btn.style.border = "1px solid #2193b0";
+        btn.style.background = "#fff";
+        btn.style.cursor = "pointer";
 
-        btn.addEventListener("click", () => {
-          let selected = input.value ? input.value.split(", ") : [];
-          const dateStr = `${d}-${month+1}-${year}`;
-          if (selected.includes(dateStr)) {
-            selected = selected.filter(x => x !== dateStr);
-            btn.style.background = "#fff";
-            btn.style.color = "#000";
-          } else {
-            selected.push(dateStr);
-            btn.style.background = "#2193b0";
-            btn.style.color = "#fff";
-          }
-          input.value = selected.join(", ");
-        });
+        btn.addEventListener("click", () => {
+          let selected = input.value ? input.value.split(", ") : [];
+          // Format tanggal yang dikirim ke Apps Script
+          const dateStr = `${d}-${month+1}-${year}`; 
+          
+          if (selected.includes(dateStr)) {
+            selected = selected.filter(x => x !== dateStr);
+            btn.style.background = "#fff";
+            btn.style.color = "#000";
+          } else {
+            selected.push(dateStr);
+            btn.style.background = "#2193b0";
+            btn.style.color = "#fff";
+          }
+          input.value = selected.join(", ");
+        });
 
-        container.appendChild(btn);
-      }
-    }
+        container.appendChild(btn);
+      }
+    }
 
-    renderCalendar("calendar-libur", "libur");
-    renderCalendar("calendar-cuti", "cuti");
+    renderCalendar("calendar-libur", "libur");
+    renderCalendar("calendar-cuti", "cuti");
 
-    // === Submit Form ===
-    document.getElementById("requestForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const status = document.getElementById("status");
-      status.textContent = "⏳ Mengirim data...";
+    // === Submit Form (SUDAH DIREVISI) ===
+    document.getElementById("requestForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const status = document.getElementById("status");
+      status.textContent = "⏳ Mengirim data...";
+      status.className = ""; // Bersihkan status class sebelumnya
 
-      const formData = new FormData(this);
+      const formData = new FormData(this);
 
-      fetch(scriptURL, { method: "POST", body: formData })
-        .then(res => res.text())
-        .then(res => {
-          status.textContent = "✅ Data berhasil dikirim!";
-          status.className = "success";
-          this.reset();
-        })
-        .catch(err => {
-          console.error(err);
-          status.textContent = "❌ Gagal mengirim data!";
-          status.className = "error";
-        });
-    });
-  </script>
+      fetch(scriptURL, { method: "POST", body: formData })
+        .then(res => res.text()) // Ambil respons Apps Script sebagai teks
+        .then(resText => {
+            // Periksa apakah Apps Script mengembalikan teks "Sukses"
+            if (resText.trim() === "Sukses") {
+                status.textContent = "✅ Data berhasil dikirim!";
+                status.className = "success";
+                this.reset();
+            } else {
+                // Tampilkan pesan error yang dikirim oleh Apps Script
+                console.error("Error dari Apps Script:", resText);
+                // Batasi panjang pesan agar tidak terlalu lebar
+                const errorMsg = resText.includes("Gagal") ? resText : "Gagal mengirim data! (Respons Apps Script tidak valid)";
+                status.textContent = `❌ ${errorMsg.substring(0, 100)}`;
+                status.className = "error";
+            }
+        })
+        .catch(err => {
+          console.error("Error Fetch:", err);
+          status.textContent = "❌ Gagal mengirim data! (Cek koneksi internet atau URL Web App)";
+          status.className = "error";
+        });
+    });
+  </script>
 </body>
 </html>
